--- a/src/themes/default/Header.module.css
+++ b/src/themes/default/Header.module.css
@@ -1,5 +1,6 @@
 .header {
   background: linear-gradient(90deg, #9146ff, #bf46ff);
+  margin-bottom: 4px;
   padding: 8px 16px;
   display: flex;
   align-items: center;
