--- a/src/themes/neon/Notification.module.css
+++ b/src/themes/neon/Notification.module.css
@@ -8,9 +8,9 @@
   border: 2px solid #ff00ff;
   width: 100%;
   box-sizing: border-box;
-  animation: neon-notification-slide-in 0.3s ease-out;
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .notification::before {
