Add tako: nickname animation

--- a/src/themes/tako/animations.module.css
+++ b/src/themes/tako/animations.module.css
@@ -23,6 +23,10 @@
   animation: takoModalSlide var(--animation-duration) ease-out;
 }
 
+.author-name {
+  animation: takoSlideIn var(--animation-duration) ease-out;
+}
+
 /* Tako-specific keyframes */
 @keyframes takoSlideIn {
   from {
