--- a/src/themes/tako/Message.module.css
+++ b/src/themes/tako/Message.module.css
@@ -111,7 +111,8 @@
   font-size: 0.95rem;
   background-color: #7456d7;
   padding: 0.5rem 1rem;
-  border-radius: 12px;
+  border-radius: 12px 12px 0 0;
+  margin-left: 0.5rem;
 }
 
 .badges {
