--- a/src/themes/tako/Message.module.css
+++ b/src/themes/tako/Message.module.css
@@ -95,7 +95,7 @@
   background-color: #7456d7;
   padding: 0.5rem 1rem;
   border-radius: 12px 12px 0 0;
-  margin-left: 0.5rem;
+  margin: 0.5rem;
   animation: takoSlideIn var(--animation-duration, 0.3s) ease-out;
 }
 
