--- a/src/components/VirtualScroll/VirtualScroll.module.css
+++ b/src/components/VirtualScroll/VirtualScroll.module.css
@@ -5,6 +5,8 @@
   overflow-x: hidden;
   padding: 0.5rem 0.5rem 0 0.5rem;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .scrollContainer {
@@ -13,11 +15,10 @@
 }
 
 .visibleArea {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  will-change: transform;
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .messageWrapper {
