--- a/src/components/BadgeRenderer/BadgeRenderer.module.css
+++ b/src/components/BadgeRenderer/BadgeRenderer.module.css
@@ -1,7 +1,8 @@
-.badgeContainer {
+/* .badge-container {
   display: inline-flex;
   gap: 0.25rem;
   margin-right: 0.5rem;
+  padding: 0.5rem;
   align-items: center;
 }
 
@@ -22,4 +23,4 @@
   height: 18px;
   vertical-align: middle;
   object-fit: contain;
-}
+} */
