Refactored badges component to controll badges styles in each theme

--- a/src/themes/default/Message.module.css
+++ b/src/themes/default/Message.module.css
@@ -67,6 +67,13 @@
   transition: transform var(--animation-duration-fast, 0.2s) ease;
 }
 
+.badge img {
+  height: 18px;
+  width: 18px;
+  vertical-align: middle;
+  margin: 0;
+}
+
 .badge.broadcaster {
   background-color: #db1600;
 }
