--- a/src/themes/tako/Message.module.css
+++ b/src/themes/tako/Message.module.css
@@ -47,8 +47,23 @@
   float: left;
 }
 
-.badge-container {
-  padding: 2rem;
+.badge {
+  font-weight: 600;
+  color: #ffffff;
+  font-size: 1.05em;
+  background-color: #7456d7;
+  padding: 0.5rem 1rem;
+  border-radius: 12px 12px 0 0;
+  margin: 0 0 0 0.25rem;
+  float: left;
+  text-transform: uppercase;
+}
+
+.badge img {
+  height: 16px;
+  width: 16px;
+  vertical-align: middle;
+  margin: 0;
 }
 
 .badge.broadcaster {
@@ -101,7 +116,7 @@
 }
 
 .user-type-logo img {
-  margin: -1.5rem 0.5rem -1.9rem 0.5rem;
+  margin: -1.5rem 0.5rem -2.9rem 0.5rem;
   width: 40px;
   height: 40px;
   object-fit: contain;
